# designtime-rs

./: Cargo.toml  LICENSE  README.md  designtime.json  designtime.schema.json
examples/: example.dt
src/: ast.rs  bytecode.rs  emitter_js.rs  emitter_py.rs  error.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  vm.rs
src/ast/: Cargo.toml  mod.rs  node_visitor.rs
src/ast/src/: lib.rs
src/dominate/: Cargo.toml  README.md  mod.rs  transform.rs
src/dominate/src/: dom.rs  html_mac.rs  transform.rs
src/engine/: README.md  mod.rs  runtime.rs  workspace.rs
src/examples/: night01.page.dts
src/ir/: component.rs  expressions.rs  function.rs  handler.rs  hook.rs  import.rs  ir.rs  ir_node.rs  mod.rs  page.rs  program.rs  props.rs  state.rs  test.rs  types.rs  variable.rs
src/lexer/: README.md  lexer.rs  line_tracker.rs  mod.rs  token.rs  tokens.rs
src/parser/: README.md  parser.rs
src/render/: Cargo.toml  README.md  mod.rs  render.rs
src/render-core/: Cargo.toml
src/render-core/src/: lib.rs
src/render-wasm/: Cargo.toml
src/render-wasm/src/: dom.rs  lib.rs
src/render/src/: dom.rs  lib.rs  render.rs
src/styleman/: Cargo.toml  README.md  mod.rs  styleman.rs
src/util/: ast2ir.rs  ir2cranelift.rs  mod.rs
src/watchman/: Cargo.toml  README.md  mod.rs  watchman.rs
src/watchman/src/: html_generator.rs  lib.rs  main.rs  server.rs  test.rs  watchman.rs
src/workspace/: file_processor.rs  mod.rs  workspace.rs
