[package]
name = "designtime_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "designtime_rs"
file = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
color-eyre = "0.6.5"
futures = "0.3.31"
jsonschema = "0.30.0"
lazy_static = "1.5.0"
notify = "8.0.0"
owo-colors = "4.2.1"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features= ["full"] }
warp = "0.3.7"
