[package]
name = "designtime_rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "designtime_rs"
path = "src/lib.rs"

[workspace]
members = [
    "src/ast",
    "src/dominate",
    "src/styleman",
    "src/render-core",
    "src/render-wasm",
    "src/watchman",
]

[workspace.dependencies]
designtime_ast = { path = "src/ast" }
dominate = { path = "src/dominate" }
styleman = { path = "src/styleman" }
render_core = { path = "src/render-core" }
render_wasm = { path = "src/render-wasm" }
watchman = { path = "src/watchman" }

[dependencies]
designtime_ast = { workspace = true }
dominate = { workspace = true }
styleman = { workspace = true }
render_core = { workspace = true }
watchman = { workspace = true }

anyhow = "1.0.98"
async-stream = "0.3.6"
color-eyre = "0.6.5"
futures = "0.3.31"
jsonschema = "0.30.0"
lazy_static = "1.5.0"
notify = "8.0.0"
owo-colors = "4.2.1"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features= ["full"] }
warp = "0.3.7"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "HtmlElement", "Text", "Node", "console"] }
console_error_panic_hook = "0.1.7"
