[package]
name = "render_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "HtmlElement", "Text", "Node", "console"] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dominate = { path = "../../src/dominate" }
designtime_ast = { path = "../../src/ast" }
render_core = { path = "../render-core" }