[package]
name = "render"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.77", features = ["Window", "Document", "Element", "HtmlElement", "Text", "Node", "console"] }
serde_json = "1.0.140"
designtime_ast = { workspace = true }
dominate = { workspace = true }

[lib]
crate-type = ["cdylib"]
