[package]
name = "watchman"
version = "0.1.0"
edition = "2021"
description = "A simple watchman crate using render-core with HTML generation and web server"
repository = "https://github.com/prestons18/designtime-rs"

[dependencies]
render_core = { path = "../render-core" }
designtime_ast = { path = "../ast" }
dominate = { path = "../dominate" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
fs_extra = "1.3"

wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "console_error_panic_hook"]

[[bin]]
name = "watchman"
path = "src/main.rs"